# cob_bringup_sandbox

./: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  rosdep.yaml  stack.xml
cob_camera_sensors_ipa/: mainpage.dox  manifest.xml
cob_camera_sensors_ipa/msvc/: LibCameraSensors.sln  LibCameraSensors.vcxproj  LibCameraSensors.vcxproj.filters
cob_hwmonitor/: 2012-02-07-12-10-20.bag  mainpage.dox  manifest.xml  manifest.xml~
cob_hwmonitor/db/: hwmonitor.db
cob_hwmonitor/doku/: doku-ger v.1.0.odt
cob_hwmonitor/python/: setAllOff.py  setOff_Channel_1.py  setOff_Channel_2.py  setOff_Channel_3.py  setOff_Channel_5.py  setOff_Channel_6.py  setOff_Channel_7.py  setOn_Channel_1.py  setOn_Channel_2.py  setOn_Channel_5.py  setOn_Channel_7.py
cob_hwmonitor/src/: db_test.py  hwpy.py  listener.cpp~
cob_prosilica_camera/: streaming.launch
cob_prosilica_camera/cfg/: ProsilicaCamera.cfg
cob_prosilica_camera/src/: Makefile
cob_roboskin/: CMakeLists.txt  manifest.xml
cob_roboskin/msg/: roboskinCAN.msg  roboskinCAN2.msg
cob_roboskin/src/: listener.cpp  listener1.cpp  roboskin.cpp  roboskin1.cpp  roboskin2.cpp
cob_roboskin_exp/: CMakeLists.txt  mainpage.dox  manifest.xml
cob_roboskin_exp/launch/: calibration.launch  roboskin.launch  upload_param.launch
cob_roboskin_exp/script/: lwa_script_server.py  lwa_trajectories.py  test1.py  test3.py
cob_roboskin_exp/src/: calibration.cpp  cancel_topic_export_data.cpp  data_pub.cpp  fts_export_data.cpp  fts_listener.cpp  min_export_data.cpp  min_pub.cpp  roboskin2.cpp  roboskin_listener.cpp  roboskin_trajectory_cancel.cpp  rs_export_data.cpp  trajectory_export_data.cpp
fts_Omega160/: CMakeLists.txt  CanCtrl.ini  mainpage.dox  manifest.xml
fts_Omega160/msg/: fts.msg
ipa_cameras/: CMakeLists.txt  manifest.xml
msg/: hw_msg.msg  hw_msg.msg~  roboskinCAN.msg
prosilica_camera/: cam_settings.yaml  prosilica.launch
python/: setAllOn.py  setOff_Channel_4.py  setOff_Channel_8.py  setOn_Channel_3.py  setOn_Channel_4.py  setOn_Channel_6.py  setOn_Channel_8.py
src/: hwcpp.cpp  hwcpp.cpp~  hwpy.py  hwpy.py~  roboskin.cpp
(+48 files in other folders)
